# SAGeocachingJuneLWE

./: README.md  config_sample.json
html/: .htaccess  hide.html  mobile_template.html  template.html
html/css/: common.css  desktop.css  mobile.css
html/img/uploads/: README.md
html/js/: dinner.js  edit_caches.js  form_elements.js  form_tools.js  format_date_time.js  geo_maths.js  gpx_map.js  maps.js  menu.js  page_tab_tools.js  public_upload_file_list.js  registration_form.js  scoring.js  scoring_points_setup.js  scoring_powerpoint.js  scoring_team_list.js  scoring_team_scores.js  utils.js  uuid.js
html/js/ext/coordinate-parser/: coordinate-number.js  coordinates.js  validator.js
html/map/: google.html  leaflet.html
mysql/: functions.sql  tables.sql
src/: CMakeLists.txt  admin_index.cpp  contact.cpp  csp_report.cpp  download_file.cpp  get_coord_info.cpp  gpx.cpp  hide_cache.cpp  jlwe.cpp  jlwe_map.cpp  jlwe_year.cpp  js_files.cpp  login.cpp  logout.cpp  prices.h  stripe_keys.cpp  stripe_webhook.cpp
src/admin/: CMakeLists.txt  admin_tools.cpp  clear_table.cpp
src/contact_form/: CMakeLists.txt  contact_form.cpp  forward_message.cpp  set_message_status.cpp  view_message.cpp
src/core/: CMakeLists.txt  CgiEnvironment.cpp  CgiEnvironment.h  Encoder.cpp  Encoder.h  FormElements.cpp  FormElements.h  HtmlTemplate.cpp  HtmlTemplate.h  HttpRequest.cpp  HttpRequest.h  JlweCore.cpp  JlweCore.h  JlweUtils.cpp  JlweUtils.h  JsonUtils.cpp  JsonUtils.h  KeyValueParser.cpp  KeyValueParser.h  PaymentUtils.cpp  PaymentUtils.h  PostDataParser.cpp  PostDataParser.h
src/email/: CMakeLists.txt  Email.cpp  Email.h  EmailTemplates.cpp  EmailTemplates.h  JlweHtmlEmail.cpp  JlweHtmlEmail.h
src/email_forward/: CMakeLists.txt  email_forward.cpp  set_email_forwarder.cpp
src/ext/: CMakeLists.txt  README.md
src/ext/crypt_blowfish/: Makefile
src/ext/md4c/: md4c-entity.c  md4c-html.c
src/files/: CMakeLists.txt  download_file_zip.cpp  file_api.cpp  files.cpp  public_upload.cpp  thumbnail.cpp  upload_file.cpp
src/gpx_builder/: CMakeLists.txt  WriteCacheListDOCX.cpp  WriteCacheListDOCX.h  WriteCachePhotosDOCX.cpp  WriteCachePhotosDOCX.h  builder_map.cpp  delete_cache.cpp  download_cache_list.cpp  download_cache_photos.cpp  download_gpx.cpp  edit_caches.cpp  get_cache.cpp  gpx_builder.cpp  set_cache.cpp  set_handout_cache.cpp
src/kml/: CMakeLists.txt  KmlCoordinateList.cpp  KmlCoordinateList.h  KmlFile.cpp  KmlFile.h  KmlPlacemark.cpp  KmlPlacemark.h
src/log/: CMakeLists.txt  sendmail.cpp  server_status.cpp  user.cpp
src/mailing_list/: CMakeLists.txt  download_email_list.cpp  email_signup.cpp  mailing_list.cpp  manage_subscription.cpp  resend_verify_email.cpp  send_email.cpp  write_email.cpp
src/notes/: CMakeLists.txt  notes.cpp  save_notes.cpp
src/ooxml/: WriteDOCX.cpp  WriteDOCX.h  WriteXLSX.cpp  WriteXLSX.h
src/password/: CMakeLists.txt  Password.cpp  Password.h  change.cpp  reset.cpp  send_reset.cpp  send_reset_email.cpp
src/public_upload/: CMakeLists.txt  GoogleAuthToken.cpp  GoogleAuthToken.h  ImageUtils.cpp  ImageUtils.h  edit_image.cpp  gd_list_files.cpp  gd_upload_file.cpp  list_public_upload.cpp
src/registration/: CMakeLists.txt  DinnerOrderXLS.cpp  DinnerOrderXLS.h  DinnerUtils.cpp  DinnerUtils.h  RegistrationXLS.cpp  RegistrationXLS.h  WriteRegistrationXLSX.cpp  WriteRegistrationXLSX.h  add_payments.cpp  cancel.cpp  confirmation_reg.cpp  create_stripe_session.cpp  download_dinner_orders.cpp  download_event_registrations.cpp  get_details.cpp  get_form_content.cpp  payment_history.cpp  payment_reminder_email.cpp  registration.cpp  registration_form.cpp  registration_reminder_email.cpp  submit_reg.cpp
src/scoring/: CMakeLists.txt  PointCalculator.cpp  PointCalculator.h  PowerPoint.cpp  PowerPoint.h  WriteScoringXLSX.cpp  WriteScoringXLSX.h  auto_team_import.cpp  download_ppt.cpp  download_scoring_xlsx.cpp  get_points.cpp  get_results.cpp  get_scores.cpp  get_slides.cpp  results.cpp  save_scoring_data.cpp  save_team_info.cpp  scoring.cpp  set_best_cache.cpp  set_find_value.cpp  set_points.cpp  set_slide.cpp  upload_scoring_xlsx.cpp
src/settings/: CMakeLists.txt  set_variable.cpp  set_zone_points.cpp  settings.cpp
src/users/: CMakeLists.txt  set_user_perm.cpp  set_user_preferences.cpp  users.cpp
src/website_edit/: CMakeLists.txt  delete_image.cpp  get_webpage_json.cpp  set_webpage_json.cpp  upload_image.cpp  website_edit.cpp
templates/registration/docProps/: app.xml
templates/registration/xl/: styles.xml
templates/scoring/: [Content_Types].xml
templates/scoring/xl/: styles.xml
